added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -23,3 +23,18 @@
   title = {{The mysterious disappearance of Ettore Majorana}},
   journal = {J. Phys.: Conf. Ser.},
 }
+
+
+@article{Doose_2007,
+  doi = {10.1007/s00249-007-0133-7},
+  url = {https://doi.org/10.1007%2Fs00249-007-0133-7},
+  year = {2007},
+  month = {feb},
+  publisher = {Springer Nature},
+  volume = {36},
+  number = {6},
+  pages = {669--674},
+  author = {Sören Doose and Mike Heilemann and Xavier Michalet and Shimon Weiss and Achillefs N. Kapanidis},
+  title = {{Periodic acceptor excitation spectroscopy of single molecules}},
+  journal = {European Biophysics Journal},
+}
