added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -38,3 +38,18 @@
   title = {{Periodic acceptor excitation spectroscopy of single molecules}},
   journal = {European Biophysics Journal},
 }
+
+
+@article{Lee_2005,
+  doi = {10.1529/biophysj.104.054114},
+  url = {https://doi.org/10.1529%2Fbiophysj.104.054114},
+  year = {2005},
+  month = {apr},
+  publisher = {Elsevier {BV}},
+  volume = {88},
+  number = {4},
+  pages = {2939--2953},
+  author = {Nam Ki Lee and Achillefs N. Kapanidis and You Wang and Xavier Michalet and Jayanta Mukhopadhyay and Richard H. Ebright and Shimon Weiss},
+  title = {{Accurate {FRET} Measurements within Single Diffusing Biomolecules Using Alternating-Laser Excitation}},
+  journal = {Biophysical Journal},
+}
