--- a/14222.md
+++ b/14222.md
@@ -1,1 +1,1 @@
-Like in μsALEX, PAX has four basig photon streams: $F_{DexDem}, F_{DexDem}
+Like in μsALEX, PAX has four basig photon streams: $F_{DexDem}, F_{DexAem}
