--- a/14222.md
+++ b/14222.md
@@ -1,1 +1,2 @@
-Like in μsALEX, PAX has four basig photon streams: $F_{DexDem}, F_{DexAem}, F_{AexDem}, F_{AexAem}$.
+Like in μsALEX, PAX has four basig photon streams: 
+$F_{DexDem}, F_{DexAem}, F_{AexDem}, F_{AexAem}$.
