--- a/14222.md
+++ b/14222.md
@@ -1,2 +1,2 @@
-In μsALEX, PAX has four basig photon streams: 
+In both μsALEX, PAX has four basig photon streams: 
 \(F_{DexDem}, F_{DexAem}, F_{AexDem}, F_{AexAem}\).
