--- a/14222.md
+++ b/14222.md
@@ -1,3 +1,3 @@
-In both ALEX, PAX ha four basic photon streams: 
+In both ALEX, PAX have four basic photon streams: 
 \(F_{DexDem}, F_{DexAem}, F_{AexDem}, F_{AexAem}\).
 In ALEX
