--- a/14222.md
+++ b/14222.md
@@ -1,3 +1,3 @@
 In both ALEX, PAX have four basic photon streams: 
 \(F_{DexDem}, F_{DexAem}, F_{AexDem}, F_{AexAem}\).
-In ALEX, \(F_{AexDem}\) only contains background 
+In ALEX, \(F_{AexDem}\) only contains only background 
