--- a/14222.md
+++ b/14222.md
@@ -1,4 +1,4 @@
 In both ALEX, PAX have four basic photon streams: 
 \(F_{DexDem}, F_{DexAem}, F_{AexDem}, F_{AexAem}\).
 In ALEX, \(F_{AexDem}\) only contains only background 
-because there is no fluore
+because there is no fluorescent emi
