--- a/14222.md
+++ b/14222.md
@@ -3,4 +3,4 @@ In both ALEX, PAX have four basic photon streams:
 In ALEX, \(F_{AexDem}\) only contains only background 
 because there is no fluorescent emission in the D
 spectral band during A-laser excitation.
-In PAX, the \(Aex\$
+In PAX, the \(Aex\
