--- a/14222.md
+++ b/14222.md
@@ -4,4 +4,4 @@ In ALEX, \(F_{AexDem}\) only contains only background
 because there is no fluorescent emission in the D
 spectral band during A-laser excitation.
 In PAX, the \(Aex\) period has excitation from
-both D and A lasers. We could call this
+both D and A lasers. We could call this the
