--- a/14222.md
+++ b/14222.md
@@ -4,5 +4,5 @@ In ALEX, \(F_{AexDem}\) only contains only background
 because there is no fluorescent emission in the D
 spectral band during A-laser excitation.
 In PAX, we have a period were there is only D excitation
-that we denote as \(Dex\),  period has excitation from
+that we denote as \(Dex\), and period has excitation from
 both D and A lasers. We could call this the
