--- a/14222.md
+++ b/14222.md
@@ -3,6 +3,6 @@ In both ALEX, PAX have four basic photon streams:
 In ALEX, \(F_{AexDem}\) only contains only background 
 because there is no fluorescent emission in the D
 spectral band during A-laser excitation.
-In PAX, we have a period were there is only D excitation
+In PAX, there a period were there is only D excitation
 that we denote as \(Dex\), and a period has excitation from
 both D and A lasers. We could call this the
