--- a/14222.md
+++ b/14222.md
@@ -4,5 +4,5 @@ In ALEX, \(F_{AexDem}\) only contains only background
 because there is no fluorescent emission in the D
 spectral band during A-laser excitation.
 In PAX, there is a period with only D excitation
-that we denote as \(Dex\), and a period has excitation from
+that we denote as \(Dex\), and a period with bohas excitation from
 both D and A lasers. We could call this the
