--- a/14222.md
+++ b/14222.md
@@ -5,5 +5,5 @@ because there is no fluorescent emission in the D
 spectral band during A-laser excitation.
 In PAX, there is a period with only D excitation
 that we denote as \(Dex\), and a period with both D and A
-has excitation from
+excitation from
 both D and A lasers. We could call this the
