--- a/14222.md
+++ b/14222.md
@@ -1,4 +1,4 @@
-In ALEX, PAX have four basic photon streams: 
+In ALEXhave four basic photon streams: 
 \(F_{DexDem}, F_{DexAem}, F_{AexDem}, F_{AexAem}\).
 In ALEX, \(F_{AexDem}\) only contains only background 
 because there is no fluorescent emission in the D
