--- a/14222.md
+++ b/14222.md
@@ -1,6 +1,6 @@
 In ALEX we have four basic photon streams: 
 \(F_{DexDem}, F_{DexAem}, F_{AexDem}, F_{AexAem}\).
-The \(F_{AexDem}\) signal only contains only background 
+The \(F_{AexDem}\) sonly contains only background 
 because there is no fluorescent emission in the D
 spectral band during A-laser excitation.
 In PAX, there is a period with only D excitation
