--- a/14222.md
+++ b/14222.md
@@ -4,5 +4,5 @@ The \(F_{AexDem}\) stream only contains background
 because there is no fluorescent emission in the D
 spectral band during A-laser excitation.
 In PAX, there is a period with only D excitation
-that we denote as \(Dex\), and a period with both D and A
+that we denote as \(D_ex\), and a period with both D and A
 excitations that we call \(DAex\)
