--- a/14222.md
+++ b/14222.md
@@ -5,4 +5,4 @@ because there is no fluorescent emission in the D
 spectral band during A-laser excitation.
 In PAX, there is a period with only D excitation
 that we denote as \(D_{ex}\), and a period with both D and A
-excitations that we call \(DA_{ex\)
+excitations that we call \(DA_{ex}\)
