--- a/14222.md
+++ b/14222.md
@@ -7,3 +7,4 @@ In PAX, there is a period with only D excitation
 that we denote as \(D_{ex}\), and a period with both D and A
 excitations that we call \(DA_{ex}\).
 With this convention the four photon stream in PAX are:
+\(F_{DexDem}, F_{DexAem}, F_{AexDem}, F_{AexAem}\).
