--- a/14222.md
+++ b/14222.md
@@ -8,4 +8,4 @@ that we denote as \(D_{ex}\), and a period with both D and A
 excitations that we call \(DA_{ex}\).
 With this convention the four photon stream in PAX are:
 \(F_{DexDem}, F_{DexAem}, F_{DAexDem}, F_{DAexAem}\).
-Note the similarit
+Note t
