--- a/14222.md
+++ b/14222.md
@@ -6,6 +6,6 @@ spectral band during A-laser excitation.
 In PAX, there is a period with only D excitation
 that we denote as \(D_{ex}\), and a period with both D and A
 excitations that we call \(DA_{ex}\).
-With this convention,  the four photon stream in PAX are:
+With this convention, we ca the four photon stream in PAX are:
 \(F_{DexDem}, F_{DexAem}, F_{DAexDem}, F_{DAexAem}\).
 Note that
