--- a/14222.md
+++ b/14222.md
@@ -7,6 +7,6 @@ In PAX, there is a period with only D excitation
 that we denote as \(D_{ex}\), and a period with both D and A
 excitations that we call \(DA_{ex}\).
 With this convention, we can name the four photon stream in PAX
-simply replacing 
+simply replacing \(DA_{ex}\).
 \(F_{DexDem}, F_{DexAem}, F_{DAexDem}, F_{DAexAem}\).
 Note that
