--- a/14222.md
+++ b/14222.md
@@ -10,4 +10,4 @@ With this convention, we can name the four photon stream in PAX
 simply replacing \(A_{ex}\) with \(DA_{ex}\):
 \(F_{DexDem}, F_{DexAem}, F_{DAexDem}, F_{DAexAem}\).
 Note however that \(F_{DAexDem}\) in PAX contains
-fluorescent sign
+fluorescent signal
