--- a/14222.md
+++ b/14222.md
@@ -11,4 +11,4 @@ simply replacing \(A_{ex}\) with \(DA_{ex}\):
 \(F_{DexDem}, F_{DexAem}, F_{DAexDem}, F_{DAexAem}\).
 Note however that \(F_{DAexDem}\) in PAX contains
 fluorescent signal because of the D laser excitation.
-With this
+With this notation
