--- a/14222.md
+++ b/14222.md
@@ -16,6 +16,6 @@ With this notation we can write the expression for
 
 \[
 E = \frac{F_{DexAem}}{\gamma\,F_{DexDem} + F_{DexAem}}
-\label{eq}
+\label{eq:E}
 \]
 
