--- a/14222.md
+++ b/14222.md
@@ -19,4 +19,4 @@ E = \frac{F_{DexAem}}{\gamma\,F_{DexDem} + F_{DexAem}}
 \label{eq:E}
 \]
 
-Eq. \ref{eq:E} is exactly the same for both ALEX and 
+Eq. \ref{eq:E} is exactly the same for both ALEX and PA
