--- a/14222.md
+++ b/14222.md
@@ -20,4 +20,4 @@ E = \frac{F_{DexAem}}{\gamma\,F_{DexDem} + F_{DexAem}}
 \]
 
 Eq. \ref{eq:E} is exactly the same for both ALEX and PAX.
-Conversely, the stoichiometry \(
+Conversely, the stoichiometry \(S
