--- a/14222.md
+++ b/14222.md
@@ -21,4 +21,4 @@ E = \frac{F_{DexAem}}{\gamma\,F_{DexDem} + F_{DexAem}}
 
 Eq. \ref{eq:E} is exactly the same for both ALEX and PAX.
 Conversely, the stoichiometry \(S\) is slightly different
-in the two cases
+in the two cases. I
