--- a/14222.md
+++ b/14222.md
@@ -23,3 +23,7 @@ Eq. \ref{eq:E} is exactly the same for both ALEX and PAX.
 Conversely, the stoichiometry \(S\) is slightly different
 in the two cases. In ALEX we define:
 
+\[
+E = \frac{F_{DexAem}}{\gamma\,F_{DexDem} + F_{DexAem}}
+\label{eq:E}
+\]
