--- a/14222.md
+++ b/14222.md
@@ -24,6 +24,6 @@ Conversely, the stoichiometry \(S\) is slightly different
 in the two cases. In ALEX we define:
 
 \[
-E = \frac{F_{DexAem} + F_{DexDem}}{F_{DexAem} + F_{DexDem} }
+E = \frac{F_{DexAem} + F_{DexDem}}{F_{DexAem} + F_{DexDem} +}
 \label{eq:S}
 \]
