--- a/14222.md
+++ b/14222.md
@@ -21,7 +21,7 @@ E = \frac{F_{DexAem}}{\gamma\,F_{DexDem} + F_{DexAem}}
 
 Eq. \ref{eq:E} is exactly the same for both ALEX and PAX.
 Conversely, the stoichiometry \(S\) is slightly different
-in the two cases. In ALEX we define :
+in the two cases. In ALEX we define \(S\):
 
 \[
 S = \frac{F_{DexAem} + F_{DexDem}}{F_{DexAem} + F_{DexDem} + F_{AexAem}}
