--- a/14222.md
+++ b/14222.md
@@ -28,4 +28,5 @@ S = \frac{F_{DexAem} + F_{DexDem}}{F_{DexAem} + F_{DexDem} + F_{AexAem}}
 \label{eq:S}
 \]
 
-and the \(\gamma\)-corrected version \(S_\gamma\) as
+and the \(\gamma\)-corrected version \(S_\gamma\) as:
+
