--- a/14222.md
+++ b/14222.md
@@ -30,3 +30,7 @@ S = \frac{F_{DexAem} + F_{DexDem}}{F_{DexAem} + F_{DexDem} + F_{AexAem}}
 
 and the \(\gamma\)-corrected version \(S_\gamma\) as:
 
+\[
+S = \frac{F_{DexAem} + F_{DexDem}}{F_{DexAem} + F_{DexDem} + F_{AexAem}}
+\label{eq:S}
+\]
