--- a/14222.md
+++ b/14222.md
@@ -31,6 +31,6 @@ S = \frac{F_{DexAem} + F_{DexDem}}{F_{DexAem} + F_{DexDem} + F_{AexAem}}
 and the \(\gamma\)-corrected version \(S_{\gamma\beta}\) as:
 
 \[
-S = \frac{F_{DexAem} + \gamma F_{DexDem}}{F_{DexAem} + \gamma F_{DexDem} + F_{AexAem}}
+S = \frac{F_{DexAem} + \gamma F_{DexDem}}{F_{DexAem} + \gamma F_{DexDem} + F_{AexAem}/}
 \label{eq:S}
 \]
