--- a/14222.md
+++ b/14222.md
@@ -35,4 +35,4 @@ S = \frac{F_{DexAem} + \gamma F_{DexDem}}{F_{DexAem} + \gamma F_{DexDem} + F_{Ae
 \label{eq:S}
 \]
 
-In PAX, we do not measure a \(F_{AexAem}\) stream, but we can compute it
+In PAX, we do not measure a \(F_{AexAem}\) stream, but we can compute it as
