--- a/14222.md
+++ b/14222.md
@@ -32,7 +32,7 @@ and the corrected version \(S_{\gamma\beta}\) as:
 
 \[
 S = \frac{F_{DexAem} + \gamma F_{DexDem}}{F_{DexAem} + \gamma F_{DexDem} + F_{AexAem}/\beta}
-\label{eq:S}
+\label{eq:Sgb}
 \]
 
 In PAX, we do not measure a \(F_{AexAem}\) stream, but we can compute it as:
