--- a/14222.md
+++ b/14222.md
@@ -37,3 +37,8 @@ S = \frac{F_{DexAem} + \gamma F_{DexDem}}{F_{DexAem} + \gamma F_{DexDem} + F_{Ae
 
 In PAX, we do not measure a \(F_{AexAem}\) stream, but we can compute it as:
 
+\[
+S = \frac{F_{DexAem} + \gamma F_{DexDem}}{F_{DexAem} + \gamma F_{DexDem} + F_{AexAem}/\beta}
+\label{eq:Sgb}
+\]
+
