--- a/14222.md
+++ b/14222.md
@@ -38,7 +38,7 @@ S = \frac{F_{DexAem} + \gamma F_{DexDem}}{F_{DexAem} + \gamma F_{DexDem} + F_{Ae
 In PAX, we do not measure a \(F_{AexAem}\) stream, but we can compute it as:
 
 \[
-\~{F}_{AexAem}
+\{F}_{AexAem}
 \label{eq:Sgb}
 \]
 
