added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -53,3 +53,19 @@
   title = {{Accurate {FRET} Measurements within Single Diffusing Biomolecules Using Alternating-Laser Excitation}},
   journal = {Biophysical Journal},
 }
+
+
+@article{Ingargiola_2016,
+  doi = {10.1371/journal.pone.0160716},
+  url = {https://doi.org/10.1371%2Fjournal.pone.0160716},
+  year = {2016},
+  month = {aug},
+  publisher = {Public Library of Science ({PLoS})},
+  volume = {11},
+  number = {8},
+  pages = {e0160716},
+  author = {Antonino Ingargiola and Eitan Lerner and SangYoon Chung and Shimon Weiss and Xavier Michalet},
+  editor = {Vadim E. Degtyar},
+  title = {{{FRETBursts}: An Open Source Toolkit for Analysis of Freely-Diffusing Single-Molecule {FRET}}},
+  journal = {{PLOS} {ONE}},
+}
