added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -69,3 +69,18 @@
   title = {{{FRETBursts}: An Open Source Toolkit for Analysis of Freely-Diffusing Single-Molecule {FRET}}},
   journal = {{PLOS} {ONE}},
 }
+
+
+@article{Kapanidis_2005,
+  doi = {10.1021/ar0401348},
+  url = {https://doi.org/10.1021%2Far0401348},
+  year = {2005},
+  month = {jul},
+  publisher = {American Chemical Society ({ACS})},
+  volume = {38},
+  number = {7},
+  pages = {523--533},
+  author = {Achillefs N. Kapanidis and Ted A. Laurence and Nam Ki Lee and Emmanuel Margeat and Xiangxu Kong and Shimon Weiss},
+  title = {{Alternating-Laser Excitation of Single Molecules}},
+  journal = {Accounts of Chemical Research},
+}
