added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -84,3 +84,19 @@
   title = {{Alternating-Laser Excitation of Single Molecules}},
   journal = {Accounts of Chemical Research},
 }
+
+
+@article{28419142,
+  title = {{Multispot single-molecule FRET: High-throughput analysis of freely diffusing molecules.}},
+  date = {2017},
+  source = {PLoS One},
+  authors = {Ingargiola, A and Lerner, E and Chung, S and Panzeri, F and Gulinatti, A and Rech, I and Ghioni, M and Weiss, S and Michalet, X},
+  author = {Ingargiola, A and Lerner, E and Chung, S and Panzeri, F and Gulinatti, A and Rech, I and Ghioni, M and Weiss, S and Michalet, X},
+  year = {2017},
+  month = {},
+  journal = {PLoS One},
+  volume = {12},
+  number = {},
+  pages = {e0175766},
+  pubmed_id = {28419142},
+}
