added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -100,3 +100,19 @@
   pages = {e0175766},
   pubmed_id = {28419142},
 }
+
+
+@article{Ingargiola_2017,
+  doi = {10.1371/journal.pone.0175766},
+  url = {https://doi.org/10.1371%2Fjournal.pone.0175766},
+  year = {2017},
+  month = {apr},
+  publisher = {Public Library of Science ({PLoS})},
+  volume = {12},
+  number = {4},
+  pages = {e0175766},
+  author = {Antonino Ingargiola and Eitan Lerner and SangYoon Chung and Francesco Panzeri and Angelo Gulinatti and Ivan Rech and Massimo Ghioni and Shimon Weiss and Xavier Michalet},
+  editor = {Alexander F. Palazzo},
+  title = {{Multispot single-molecule {FRET}: High-throughput analysis of freely diffusing molecules}},
+  journal = {{PLOS} {ONE}},
+}
