--- a/17a3b.md
+++ b/17a3b.md
@@ -1,3 +1,3 @@
 # Laser alignment
 
-Each for the two lasers need to be aligned in order to ensure that (a) the mamximum uniformity between spots and (b) the 
+Each for the two lasers need to be aligned in order to ensure that (a) the mamximum uniformity between spots and (b) the mini
