--- a/17a3b.md
+++ b/17a3b.md
@@ -1,3 +1,3 @@
 # Laser alignment
 
-Each for the two lasers need to be aligned in order to ensure (a) the maximum uniformity between spots intensities (b) the minimal abberrations across the patterns. To achieve (a) the Gaussian laser beam is expanded so that only the central part of the beam covers the excitation pattern (which has a maximum extension of $\sim$5mm. For ensure minimal abberrations the 
+Each for the two lasers need to be aligned in order to ensure (a) the maximum uniformity between spots intensities (b) the minimal abberrations across the patterns. To achieve (a) the Gaussian laser beam is expanded so that only the central part of the beam covers the excitation pattern (which has a maximum extension of $\sim$5mm. For ensure minimal abberrations the center of the pattern
